fix: sty;e error fixed

--- a/html.html
+++ b/html.html
@@ -15,6 +15,7 @@
     justify-content: center;
     align-items: center;
     font-family: consolas;
+    font-size: '1px' !important;
 }
 
 .container{
